#Addition: Bring back most fundamental functions of the 3D UI system.